--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <div>
-        <a href="./private.html"></a>
+        <a href="./privacy.html">Privacy</a>
     </div>
 
     <!-- <footer class="hidden-section hidden" id="footer" lang="zh-CN"> -->
