--- a/index.html
+++ b/index.html
@@ -25,13 +25,18 @@
 
 <body>
     <div>
-        <a href="./privacy.html">Privacy</a>
+        <h2>Circasts</h2>
+        <p>RSS Reader. Pocasts Player.</p>
+        <p>Fallback · Focus · Follow</p>
     </div>
-
     <!-- <footer class="hidden-section hidden" id="footer" lang="zh-CN"> -->
     <footer id="footer">
         <div class="container">
             <p>Copyright © 2021 Kokovagas. <br>All rights reserved.</p>
+        </div>
+
+        <div>
+            <a href="./privacy.html">Privacy</a>
         </div>
     </footer>
 </body>
